# background-splitting

./: README.md  index.html  main.py  models.py  pyproject.toml  util.py  warmup_scheduler.py
data_splits/: inaturalist17_bg_100.txt
datasets/: auxiliary_dataset.py  inaturalist17_dataset.py
docs/: index.html
