[tool.poetry]
name = "background-splitting"
version = "0.1.0"
description = ""
authors = ["Fait Poms <faitpoms@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
scipy = "^1.6.3"
torch = ">=1.8"
torchvision = "^0.9.1"
tensorboard = "^2.5.0"
sklearn = "^0.0"
imageio = "^2.9"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
